[gd_scene load_steps=5 format=3 uid="uid://c4gbwnro3xm6l"]

[ext_resource type="Texture2D" uid="uid://cu3ucp0ocryit" path="res://art/objects/Pillar_01.png" id="1_8aeuy"]
[ext_resource type="Script" path="res://interactables/pressure_plate/pressure_plate.gd" id="1_yn8kn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tusty"]
size = Vector2(48, 11)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_bvkav"]
properties/0/path = NodePath(".:is_down")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="PressurePlate" type="Node2D"]
script = ExtResource("1_yn8kn")

[node name="PlateUp" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.3)
texture = ExtResource("1_8aeuy")

[node name="PlateDown" type="Sprite2D" parent="."]
visible = false
position = Vector2(2.08165e-12, 3)
scale = Vector2(0.15, 0.3)
texture = ExtResource("1_8aeuy")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_tusty")

[node name="PlateSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_bvkav")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="delta_synchronized" from="PlateSynchronizer" to="." method="_on_plate_synchronizer_delta_synchronized"]
